--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>My blog</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Jolon's Blog</title>
+    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/033d1fe604.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
   <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1> 
-    <p> This is the beginning of my website home page.</p>
-    <p> It will eventually contain a list of links to all my blogs. </p>
+    <nav class="navbar">
+      <div class="logo">JOLON</div>
+      <div class="menu-items">
+        <div class="home">HOME</div>
+        <div class="blog-posts">BLOG</div>
+      </div>
+      <div class="social-icons">
+        <a href="https://github.com/jolonbentley" target="_blank">
+          <i
+            class="fa-brands fa-github fa-2x small-icon-style"
+            aria-hidden="true"
+          ></i>
+        </a>
+      </div>
+    </nav>
   </body>
 </html>
