--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cabin:wght@500;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
     <script
@@ -32,5 +32,8 @@
         </a>
       </div>
     </nav>
+    <header class="large-header">
+      <h1>JOLON'S<br />BLOG</h1>
+    </header>
   </body>
 </html>
