Navbar items removed

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <nav class="navbar">
       <div class="logo">JOLON</div>
       <div class="menu-items">
-        <div class="home">HOME</div>
-        <div class="blog-posts">BLOG</div>
+        <!-- <div class="home">HOME</div>
+        <div class="blog-posts">BLOG</div> -->
       </div>
       <div class="social-icons">
         <a href="https://github.com/jolonbentley" target="_blank">
