Blog one link added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="social-icons">
         <a href="https://github.com/jolonbentley" target="_blank">
           <i
-            class="fa-brands fa-github fa-2x small-icon-style"
+            class="github-icon fa-brands fa-github fa-2x small-icon-style"
             aria-hidden="true"
           ></i>
         </a>
@@ -35,5 +35,16 @@
     <header class="large-header">
       <h1>JOLON'S<br />BLOG</h1>
     </header>
+    <main>
+      <div class="blog-container">
+        <div class="blog-one">
+          <h2>Blog Post One</h2>
+          <p>
+            <a href="/blog/te-houtaewa-template.html">Here is the link</a> to my
+            first blog post. Enjoy!
+          </p>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
