Blog one description updated

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <div class="blog-one">
           <h2>Blog Post One</h2>
           <p>
-            <a href="/blog/te-houtaewa-template.html">Here is the link</a> to my
-            first blog post. Enjoy!
+            <a href="/blog/te-houtaewa-template.html">Here is the link</a> to a
+            short story about Te-Houtaewa. Enjoy!
           </p>
         </div>
       </div>
