Blog post link updated

--- a/index.html
+++ b/index.html
@@ -37,11 +37,21 @@
     </header>
     <main>
       <div class="blog-container">
-        <div class="blog-one">
+        <div class="blog-post-containers">
           <h2>Blog Post One</h2>
           <p>
-            <a href="/blog/te-houtaewa-template.html">Here is the link</a> to a
-            short story about Te-Houtaewa. Enjoy!
+            <a class="blog-link" href="/blog/te-houtaewa-template.html"
+              >Here is the link</a
+            >
+            to a short story about Te-Houtaewa. Enjoy!
+          </p>
+        </div>
+        <div class="blog-post-containers">
+          <h2>Blog Post Two</h2>
+          <p>
+            <a class="blog-link" href="/blog/html-css.html">Here is the link</a>
+            to my post about using Classes vs ID's in your HTML and CSS code.
+            Enjoy!
           </p>
         </div>
       </div>
