new blog post links added and updated

--- a/index.html
+++ b/index.html
@@ -38,21 +38,37 @@
     <main>
       <div class="blog-container">
         <div class="blog-post-containers">
-          <h2>Blog Post One</h2>
+          <h2>Te-Houtaewa</h2>
           <p>
             <a class="blog-link" href="/blog/te-houtaewa-template.html"
               >Here is the link</a
             >
-            to a short story about Te-Houtaewa. Enjoy!
+            to a short story about Te-Houtaewa.
           </p>
         </div>
         <div class="blog-post-containers">
-          <h2>Blog Post Two</h2>
+          <h2>Classes vs IDs</h2>
           <p>
             <a class="blog-link" href="/blog/html-css.html">Here is the link</a>
-            to my post about using Classes vs ID's in your HTML and CSS code.
-            Enjoy!
+            to my post about using Classes vs ID's in your code.
           </p>
+          </div>
+          <div class="blog-post-containers"><h2>Identity and Values</h2>
+          <p>
+            <a class="blog-link" href="/blog/identity-values.html"
+              >Here is the link</a
+            >
+            to my post about my Identity and Values.
+          </p></div>
+          <div class="blog-post-containers">
+            <h2>Learning Plan</h2>
+          <p>
+            <a class="blog-link" href="/blog/learning-plan.html"
+              >Here is the link</a
+            >
+            to my post about my learning plan.
+          </p>
+          </div>
         </div>
       </div>
     </main>
