javascript fundamentals page added

--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
             to my post about my learning plan.
           </p>
           </div>
+          <div class="blog-post-containers">
+            <h2>JavaScript Fundamentals</h2>
+          <p>
+            <a class="blog-link" href="/blog/javascript-dom.html"
+              >Here is the link</a
+            >
+            to my post about my Javascript.
+          </p>
+          </div>
         </div>
       </div>
     </main>
