--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
           </p>
           </div>
           <div class="blog-post-containers">
+            <h2>Emotional Intelligence</h2>
+          <p>
+            <a class="blog-link" href="/blog/emotional-intelligence.html"
+              >Here is the link</a
+            >
+            to my post about my Emotional Intelligence.
+          </p>
+          </div>
+          <div class="blog-post-containers">
             <h2>JavaScript Fundamentals</h2>
           <p>
             <a class="blog-link" href="/blog/javascript-dom.html"
