problem solving blog page added

--- a/index.html
+++ b/index.html
@@ -87,6 +87,15 @@
             to my post about my Javascript.
           </p>
           </div>
+          <div class="blog-post-containers">
+            <h2>Problem Solving</h2>
+          <p>
+            <a class="blog-link" href="/blog/problem-solving.html"
+              >Here is the link</a
+            >
+            to my post about my Problem Solving relfections.
+          </p>
+          </div>
         </div>
       </div>
     </main>
