neuroplasticity blog post added

--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@
             to my post about my Problem Solving relfections.
           </p>
           </div>
+          <div class="blog-post-containers">
+            <h2>Neuroplasticity</h2>
+          <p>
+            <a class="blog-link" href="/blog/neuroplasticity.html"
+              >Here is the link</a
+            >
+            to my post about Neuroplasticity.
+          </p>
+          </div>
         </div>
       </div>
     </main>
