te whare tapa wha blog post added

--- a/index.html
+++ b/index.html
@@ -105,6 +105,15 @@
             to my post about Neuroplasticity.
           </p>
           </div>
+          <div class="blog-post-containers">
+            <h2>Te Whare Tapa Wha</h2>
+          <p>
+            <a class="blog-link" href="/blog/te-whare-tapa-wha.html"
+              >Here is the link</a
+            >
+            to my post about Te Whare Tapa Wha - The four dimensions of wellbeing.
+          </p>
+          </div>
         </div>
       </div>
     </main>
