foundations reflection page added

--- a/index.html
+++ b/index.html
@@ -114,6 +114,15 @@
             to my post about Te Whare Tapa Wha - The four dimensions of wellbeing.
           </p>
           </div>
+          <div class="blog-post-containers">
+            <h2>Foundations Reflection</h2>
+          <p>
+            <a class="blog-link" href="/blog/foundations-reflection.html"
+              >Here is the link</a
+            >
+            to my post about Foundation reflection.
+          </p>
+          </div>
         </div>
       </div>
     </main>
